navbar: fix navbar z-index

--- a/components/navbar/style.scss
+++ b/components/navbar/style.scss
@@ -25,6 +25,9 @@
     margin-bottom: 2em;
     box-shadow: 0 0.2em 0.2em rgba(0, 0, 0, 0.2);
 
+    position: relative;
+    z-index: 100;
+
     width: 100%;
     overflow: auto;
     white-space: nowrap;
